# Anspypher

./: .gitignore  CMakeLists.txt  Makefile  anspypher.1  anspypher.cfg  main.cpp  runtest.sh  test.cpp
cmake/: FindBerkeleyDB.cmake  FindGtest.cmake  FindHypertable.cmake  FindIce.cmake  FindProtobuf.cmake  configgen.cmake
src/: Makefile  daemon.cpp  daemon.h  dbman.cpp  dbman.h  defs.h  haszh.cpp  haszh.h  keyword.cpp  keyword.h  matcher.c  matcher.h  smartptr.h  table_scanner.cpp  table_scanner.h
tests/: anspypher_py.ice  client_test.py  test_raw.cpp
